--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,8 +27,10 @@
 name: Deploy to Amazon ECS
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["StockAssistWeb_CI"]
+    types:
+      - completed
 
 env:
   AWS_REGION: ap-northeast-2                     # set this to your preferred AWS region, e.g. us-west-1
