--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.15",
     "zxcvbn": "^4.4.2"
   },
