--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "antd": "^5.25.3",
     "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
