--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-select": "^5.10.1",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.15",
+    "vite-plugin-pwa": "^1.0.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
